# ecodev-cloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-dev  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml
ecodev_cloud/: __init__.py  constants.py  path_utils.py
ecodev_cloud/cloud/: cloud.py  cloud_helpers.py  cloud_loaders.py  cloud_savers.py
ecodev_cloud/cloud/blob/: blob_container.py  blob_helpers.py
ecodev_cloud/cloud/s3/: s3_bucket.py  s3_helpers.py
ecodev_cloud/disk/: disk_helpers.py  disk_loader.py  disk_saver.py
ecodev_cloud/file_processing/: basic_file_processing.py  netcdf_processing.py  numpy_processing.py  shapely_processing.py  tif_processing.py
ecodev_cloud/transfer/: disk_to_blob.py  migration_helpers.py  s3_to_blob.py
tests/: cloud_safe_test_case.py
tests/functional/: test_disk_to_blob.py  test_s3_to_blob.py
tests/functional/root/non_cordex_data/example/: example.csv
tests/unitary/: test_cloud_helpers.py  test_disk_helpers.py  test_file_move.py  test_load_save.py
tests/unitary/data/: example.dbf  example.json  example.npy  example.npy.npz  example.shp  example.shx  example.tex  example.tif  example.txt  example.xlsx  example_points.shx
