[tool.poetry]
name = "ecodev-cloud"
version = "0.0.3"
description = "Read/write helpers for disk/aws s3/azure blob storage"
authors = ["Thomas Epelbaum <tomepel@gmail.com>",
					 "Olivier Gabriel <olivier.gabriel.geom@gmail.com>",
					 "Amaury Salles <amaury.salles@gmail.com>",
					 "Yoann Diep <yoann.diep@hotmail.fr>",
					 "Dorian Kodelja <dorian.kodelja@gmail.com>",
                     "Japheth Yates <japheth.yates@se.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.11"
fiona = "1.8.22"
gdal = "3.6.2"
azure-storage-blob = "~12"
boto3 = "~1"
ecodev-core = "~0"
netcdf4 = "~1"
shapely = "~2"
typing-extensions = "~4"
xlsxwriter = "~3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
